# clearboard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  renovate.json
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
docker/files/usr/local/etc/gunicorn/: clearboard.py
docker/tests/: run.sh
env.d/: development.dist
src/backend/: .pylintrc  MANIFEST.in  coord.npy  setup.cfg  setup.py
src/backend/clearboard/: blackNwhite.py  black_n_white.py  color.py  config.py  contrast.py  coord_loader.py  main.py  models.py  parallax.py  process4.py  super_res.py
src/backend/clearboard/filters/: color.py  contrast.py  parallax.py
src/terraform/: .dockerignore  .terraform.lock.hcl  Dockerfile  cloudfront.tf  lambda.tf  output.tf  roles.tf  s3.tf  state.tf  user.tf  variables.tf
src/terraform/create_state_bucket/: dynamodb.tf  ecr.tf  output.tf  s3.tf  variables.tf
src/terraform/lambda-enhance/: app.py
