;;
;; Clearboard package
;;
[metadata]
name = clearboard
version = 0.0.1
description = Enhance blackboard view in an image
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Université Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/clearboard
license = MIT
keywords = FastAPI, Python, education, computer vision
classifiers =
    Development Status :: 4 - Beta
    Framework :: FastAPI
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    boto3==1.20.31
    fastapi==0.74.1
    gunicorn==20.1.0
    uvicorn==0.17.5
    python-multipart==0.0.5

package_dir =
    =.
packages = find:
zip_safe = True

[options.packages.find]
exclude =

[options.extras_require]
dev =
    bandit==1.7.1
    black==20.8b1
    flake8==4.0.1
    ipdb==0.13.9
    ipython==7.31.0
    isort==5.10.1
    pylint==2.12.2
    pytest-cov==3.0.0
    pytest-django==4.5.2
    pytest==6.2.5
    python-dotenv==0.19.2
    pybase64 == 1.2.0
    numpy == 1.22.2
    pillow == 9.0.1
    pydantic == 1.9.0
    opencv-contrib-python == 4.5.1.48

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[isort]
known_fastapi = fastapi
known_clearboard = clearboard
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
sections = FUTURE,STDLIB,FASTAPI,THIRDPARTY,CLEARBOARD,FIRSTPARTY,LOCALFOLDER
skip_glob = venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
